# visa-prep-ai-research

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
app/: __init__.py  config.py  main.py  observability.py
app/api/: routes.py  schemas.py  service.py
app/interview/: __init__.py  graph.py  nodes.py  prompts.py  report.py  scoring.py  state.py  time_context.py
app/interview/prompts/: __init__.py  blocks.py  loader.py  registry.py  (+1 more)
app/knowledge/: __init__.py  curated_overrides.json  universities.json  university_service.py
app/llm/: __init__.py  content.py  factory.py
app/ontology/: __init__.py  loader.py  models.py
app/session/: __init__.py  checkpointer.py
app/voice/: __init__.py  agent.py  cost.py  fast_turn.py  interview_llm.py  speak.py  timing.py  utterances.py
deploy/nginx/: docker-entrypoint.sh  nginx.conf
deploy/scripts/: init-ssl-standalone.sh  init-ssl.bat  init-ssl.sh  recover-stack.sh
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx-spa.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/docs/: design.md
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: build_universities.py  compare_models.py
tests/: conftest.py  test_interview_flow.py  test_llm_content.py  test_ontology.py  test_prompt_registry.py  test_prompts.py  test_scoring.py  test_time_context.py  test_university.py  test_voice_fast.py
(+21 files in other folders)
