[project]
name = "visa-agent-v5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-anthropic>=1.4.5",
    "langchain-core>=1.4.6",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "langchain-moonshot>=0.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "livekit-agents[cartesia,deepgram,elevenlabs,openai,silero]>=1.5.17",
    "livekit-api>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "rapidfuzz>=3.14.5",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
